# v8x

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DEMO.md  README.md  RUSTY_V8_VERSION  SNAPSHOT_NOTES.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml  release.yml  webkit-release.yml
docs/: index.html  snapshots-and-esm.md
patches/: quickjs-01-module-introspection.patch  quickjs-02-error-stack.patch  quickjs-03-debug-uninit.patch  quickjs-04-private-nonextensible.patch  quickjs-05-immutable-typedarray.patch  quickjs-06-bigint-warning.patch  quickjs-07-module-live-binding.patch  quickjs-08-dynamic-import-hook.patch  quickjs-09-callsite-api.patch  quickjs-10-static-visibility.patch  quickjs-100-runtime-coverage-flag.patch  quickjs-100-snapshot-source-interning.patch  quickjs-101-runtime-malloc-size.patch  quickjs-102-coverage-direct-dispatch.patch  quickjs-11-error-stack-header.patch  quickjs-12-console-preview.patch  quickjs-13-array-fromasync-enumerable.patch  quickjs-14-for-await-iterator-close.patch  quickjs-15-parse-error-column.patch  quickjs-16-async-stack-frame.patch  quickjs-17-global-lexicals.patch  quickjs-18-constructor-receiver.patch  quickjs-18-function-closures.patch  quickjs-18-heap-object-enumeration.patch  quickjs-19-v8-property-errors.patch  quickjs-20-callsite-constructor.patch  quickjs-21-host-function-state.patch  quickjs-22-icu-locale-compare.patch  quickjs-23-job-context-hooks.patch  quickjs-24-import-attribute-modules.patch  quickjs-25-async-await-column.patch  quickjs-26-eval-origin-filename.patch  quickjs-27-snapshot-builtin-helpers.patch  quickjs-28-cpu-profile-stack.patch  quickjs-29-structured-clone-objects.patch  quickjs-30-error-stack-values.patch  quickjs-31-precise-coverage.patch  quickjs-32-strict-method-names.patch  quickjs-33-method-outer-binding.patch  quickjs-34-import-error-location.patch  (+84 more)
quickjs-patches/: 0001-v82jsc.patch
src/: crdtp_shim.rs  jsc_sys.rs  lib.rs  shim_arraybuffer.rs  shim_cli_extra.rs  shim_core.rs  shim_exception.rs  shim_function.rs  shim_impl.rs  shim_isolate.rs  shim_misc.rs  shim_module.rs  shim_object.rs  shim_primitive.rs  shim_property.rs  shim_serializer.rs  shim_string.rs  shim_value.rs  shims.rs  value_serializer.rs
src/jsc/: arraybuffer.rs  bytecode.cpp  cli_extra.rs  core.rs  exception.rs  function.rs  init.rs  inspector.rs  introspect.cpp  introspect.rs  isolate.rs  jsc_sys.rs  misc.rs  mod.rs  module.rs  native_modules.cpp  object.rs  primitive.rs  property.rs  serializer.rs  shim_arraybuffer.rs  shim_core.rs  shim_exception.rs  shim_function.rs  shim_impl.rs  shim_inspector.rs  shim_isolate.rs  shim_misc.rs  shim_module.rs  shim_object.rs  shim_primitive.rs  shim_property.rs  shim_serializer.rs  shim_simdutf.rs  shim_string.rs  shim_value.rs  shims.rs  simdutf.rs  string.rs  terminate.rs  (+2 more)
src/qjs/: fam_arraybuffer.rs  fam_exception.rs  fam_function.rs  fam_isolate.rs  fam_misc.rs  fam_module.rs  fam_object.rs  fam_primitive.rs  fam_property.rs  fam_serializer.rs  fam_string.rs  fam_value.rs  fam_wasm.rs  mod.rs  quickjs_sys.rs  shim_arraybuffer.rs  shim_core.rs  shim_impl.rs  shim_inspector.rs  shim_simdutf.rs  shim_value.rs  shims.rs
src/quickjs/: allocator.rs  arraybuffer.rs  capi_tape.rs  cli_extra.rs  core.rs  exception.rs  fam_arraybuffer.rs  fam_function.rs  fam_isolate.rs  fam_misc.rs  fam_module.rs  fam_primitive.rs  fam_property.rs  fam_serializer.rs  fam_string.rs  fam_value.rs  fam_wasm.rs  function.rs  init.rs  inspector.rs  isolate.rs  misc.rs  mod.rs  module.rs  object.rs  primitive.rs  property.rs  quickjs_sys.rs  runtime.rs  serializer.rs  shim_cli_extra.rs  shim_impl.rs  shim_inspector.rs  shim_runtime.rs  shim_string.rs  shims.rs  simdutf.rs  snapshot.rs  string.rs  temporal.rs  (+3 more)
src/scope/: raw.rs
status/: history.jsonl  report.json
status/baselines/jsc/: deno_core.txt  deno_node_compat.txt  deno_unit.txt  rusty_v8.txt
status/baselines/quickjs/: deno_node_compat.txt  deno_unit.txt
status/baselines/sys-jsc/: deno_core.txt  deno_node_compat.txt  deno_unit.txt  rusty_v8.txt
tests/: README.md  resource_constraints.rs
tests/harness/: README.md  aggregate.mjs  config.json  lib.mjs  run.mjs
tests/modules/: matrix.sh  run.sh
tests/modules/fixtures/: 01_basic_imports.expected  01_basic_imports.mjs  02_cycle.mjs  03_barrel.expected  03_barrel.mjs  04_tla.expected  04_tla.mjs  05_dynamic_import.expected  05_dynamic_import.mjs  06_json_static.expected  06_json_static.mjs  07_json_dynamic.expected  07_json_dynamic.mjs  08_node_builtins.expected  08_node_builtins.mjs  09_import_meta.expected  09_import_meta.mjs  20_npm_zod.mjs  21_npm_hono.expected  21_npm_hono.mjs  22_npm_commander.mjs  23_npm_lodash.mjs  24_npm_datefns.mjs  25_npm_nanoid.mjs  26_npm_preact_ssr.mjs  27_npm_react_ssr.expected  27_npm_react_ssr.mjs
tests/modules/fixtures/_helpers/: barrel.mjs  cyc_a.mjs  cyc_b.mjs  data.json  m1.mjs  m2.mjs  named.mjs  tla.mjs
tests/status/: history.jsonl  report.json
tests/status/baselines/jsc/: deno_core.txt  rusty_v8.txt
tests/status/baselines/quickjs/: deno_core.txt  rusty_v8.txt
tests/status/baselines/sys-jsc/: deno_core.txt  rusty_v8.txt
tools/: gen_qjs_shims.sh  gen_shims.sh  jit-entitlements.plist  setup_vendor.sh  setup_webkit.sh  sync_rusty_v8.sh
tools/deno/: DENO_REF  deno-jsc-integration.patch
tools/snapshot/: build_boot_bundle.sh
wamr-patches/: 0001-v82jsc.patch
webkit-patches/: 0001-clang-wrapper.patch
